--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,8 +13,58 @@
 /*****************************************************************************
   Base Styles
 ******************************************************************************/
+body {
+	color: #333;
+	height: 100%;
+	line-height: 1.5em;
+}
+
+nav {
+	position: absolute;
+	top: 0px
+	left 0px;
+	right: 0px;
+	height: 80px;
+	display: inline;
+	width: 100%
+}
+
+nav:hover {
+	background: rgba(255, 255, 255, 0.2);
+	@include transition-duration(1.0s);
+	cursor: pointer;
+}
 
 
+header {
+	background-color: #333;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 1.5rem;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	@include transition-duration(1s);
+}
+
+#titlescreen {
+	opacity: 0.5;
+}
+
+header:hover {
+	background-color: #FFFF00;
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	@include transition-duration(1s);
+	@include linear-gradient( 45deg, yellow, green );
+
+}
 
 
 /*****************************************************************************
