--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,21 +18,29 @@ body {
 	height: 100%;
 	line-height: 1.5em;
 }
-
-nav {
-	position: absolute;
-	top: 0px
-	left 0px;
+/*****************************************************************************
+  Layout Styles
+******************************************************************************/
+#navbar {
+	@include transition-duration(0.5s);
+	position: fixed;
+	top: -9em;
+	left: 0px;
 	right: 0px;
-	height: 80px;
+	height: 13em;
 	display: inline;
-	width: 100%
+	width: 100%;
+	z-index: 1000;
+	&.active {
+    top: 0;
+  }
 }
+
 
 nav:hover {
 	background: rgba(255, 255, 255, 0.2);
-	@include transition-duration(1.0s);
 	cursor: pointer;
+
 }
 
 
@@ -65,19 +73,59 @@ header:hover {
 	@include linear-gradient( 45deg, yellow, green );
 
 }
-
-
-/*****************************************************************************
-  Layout Styles
-******************************************************************************/
-
-
-
-
 /*****************************************************************************
   Module Styles
 ******************************************************************************/
+/*NAVIGATION BAR STYLES*/
+#nav-toggle {
+  position: absolute;
+  left: 0em;
+  bottom: 0.3em;
+  cursor: pointer;
+  padding: 30px 50px 30px 30px;
 
+}
+
+#nav-toggle span,
+#nav-toggle span:before,
+#nav-toggle span:after {
+  cursor: pointer;
+  border-radius: 0px;
+  height: 3px;
+  width: 25px;
+  background: white;
+  position: absolute;
+  display: block;
+  content: '';
+}
+
+#nav-toggle span:before {
+  top: -8px;
+}
+
+#nav-toggle span:after {
+  bottom: -8px;
+}
+
+#nav-toggle span,
+#nav-toggle span:before,
+#nav-toggle span:after {
+  transition: all 300ms ease-in-out;
+}
+
+#nav-toggle.active span {
+  background-color: transparent;
+}
+#nav-toggle.active span:before,
+#nav-toggle.active span:after {
+  top: 0;
+}
+#nav-toggle.active span:before {
+  transform: rotate(45deg);
+}
+#nav-toggle.active span:after {
+  transform: rotate(-45deg);
+}
 
 
 
