--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,32 +19,33 @@ body {
 	line-height: 1.5em;
 	font-family: $helvetica;
   font-size: 1rem;
+  text-align: center;
 }
 
 a {
   color: grey;
 }
+
 /*****************************************************************************
   Layout Styles
 ******************************************************************************/
 #navbar {
-	@include transition-duration(0.5s);
+	@include transition-duration(0.2s);
 	position: fixed;
 	top: -8em;
 	left: 0px;
 	right: 0px;
-	height: 11.5em;
+	height: 12em;
 	display: inline;
 	width: 100%;
 	z-index: 1000;
 	&.active {
-    top: -100px;
+    top: -70px;
   }
 }
 
 nav {
-font-size: 1.5em;
-padding-top: 8rem;
+padding-top: 4rem;
 }
 
 nav li {
@@ -76,6 +77,7 @@ color: lightgrey;
 #navbar li {
 display: inline;
 padding: 1rem;
+
 }
 
 
@@ -126,36 +128,70 @@ header ul {
   padding: 1rem;
 }
 
+
+
 main {
 	margin: 0 16.66667%;
 }
 
 section {
   padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+section a:hover {
+  opacity: 0.8;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.movie {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  opacity: 0.8;
+}
+
+.work {
+  @include display(flex);
+
 }
 
 .work img {
-
+  width: 100%;
+  padding: 0.5rem;
 }
 
 footer {
-  background-color: grey;
-  height: 80px;
+  background: tint(yellow, 60%);
   position: absolute;
   width: 100%;
   left: 0;
   right: 0;
-  padding-top: 1em;
+  height: 200px;
+  padding-top: 4em;
+  text-align: center;
 }
 
+footer a:hover {
+color: lightgrey;
+@include transition (all 0.2s ease-in-out);
+
+}
 
 footer ul {
   display: inline;
-  margin-left: 10rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer li {
-  display: inline;
 }
 
 
