--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -78,7 +78,7 @@ text-decoration: none;
 
 nav:hover {
 background: tint(#cccc33, 80%);
-opacity: 0.8;
+opacity: 1;
 cursor: pointer;
 }
 
@@ -103,7 +103,6 @@ padding: 1rem;
 
 
 header {
-background: tint(#cccc33, 40%);
 display: flex;
 align-items: center;
 justify-content: center;
@@ -112,28 +111,10 @@ overflow: hidden;
 position: relative;
 width: 100%;
 height: 100vh;
-@include transition-duration(1s);
-}
-
-#titlescreen {
-opacity: 0.8;
-}
-
-header:hover {
-content: "";
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-@include transition-duration(1s);
-@include linear-gradient( 45deg, white, white );
 }
 
 header #skip {
-text-decoration: none;
-color: white;
 opacity: 0.8;
-text-align: center;
 position: absolute;
 bottom: 1.5rem;
 left: 0;
@@ -143,7 +124,7 @@ height: 1.5rem;
 
 header ul {
 list-style: none;
-padding: 1rem;
+padding-left: 1rem;
 }
 
 hr {
@@ -203,7 +184,7 @@ text-align: center;
 }
 
 footer div {
-display: inline;
+
 }
 
 footer .copywrite {
@@ -237,6 +218,169 @@ footer a:hover {
 @include transition (all 0.2s ease-in-out);
 opacity: 0.8;
 }
+
+/*****************************************************************************
+  Media Queries
+******************************************************************************/
+
+@media (max-width: 480px) {
+
+header {
+padding-top: 2rem;
+padding-bottom: 0rem;
+align-items: center;
+height: 100px;
+
+}
+
+section {
+  padding-top: 0rem;
+}
+
+h1 {
+font-family: FuturaPT-Bold;
+text-transform: uppercase;
+font-size: 3rem;
+letter-spacing: 5px;
+color: #cccc33;
+}
+
+p {
+margin-top: 0.5em;
+margin-bottom: 0.5em;
+padding-left: 0rem;
+padding-right: 0rem;
+font-family: Times;
+font-size: 1rem;
+font-style: italic;
+text-transform: uppercase;
+color: #2C2C2C;
+}
+
+nav {
+padding-top: 0.75rem;
+
+}
+
+#navbar {
+  display: none;
+  @include transition-duration(.25s);
+  position: fixed;
+
+}
+
+header ul {
+  display: none;
+list-style: none;
+padding: 0rem;
+}
+
+body {
+height: 100%;
+line-height: 1em;
+text-align: center;
+}
+
+h2 {
+letter-spacing: 0px;
+line-height: 0.75em;
+}
+
+footer {
+  padding-top: 0rem;
+}
+
+footer img {
+width: 30%;
+}
+
+.copywrite {
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 2rem;
+}
+
+}
+
+@media (max-width: 1024px) {
+
+header {
+padding-top: 2rem;
+padding-bottom: 0rem;
+align-items: center;
+height: 100px;
+
+}
+
+section {
+  padding-top: 0rem;
+}
+
+h1 {
+font-family: FuturaPT-Bold;
+text-transform: uppercase;
+font-size: 3rem;
+letter-spacing: 5px;
+color: #cccc33;
+}
+
+p {
+margin-top: 0.5em;
+margin-bottom: 0.5em;
+padding-left: 0rem;
+padding-right: 0rem;
+font-family: Times;
+font-size: 1rem;
+font-style: italic;
+text-transform: uppercase;
+color: #2C2C2C;
+}
+
+nav {
+padding-top: 0.75rem;
+
+}
+
+#navbar {
+  display: none;
+  @include transition-duration(.25s);
+  position: fixed;
+
+}
+
+header ul {
+  display: none;
+list-style: none;
+padding: 0rem;
+}
+
+body {
+height: 100%;
+line-height: 1em;
+text-align: center;
+}
+
+h2 {
+letter-spacing: 0px;
+line-height: 0.75em;
+}
+
+footer {
+  padding-top: 0rem;
+}
+
+footer img {
+width: 20%;
+}
+
+.copywrite {
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 2rem;
+}
+
+}
+
 
 /*****************************************************************************
   Module Styles
