--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -150,13 +150,6 @@ iframe {
 top: 0;
 left: 0;
 width: 100%;
-height: 100%;
-}
-
-.movie {
-position: relative;
-padding-bottom: 56.25%;
-height: 0;
 }
 
 .work {
@@ -217,6 +210,10 @@ list-style: none;
 footer a:hover {
 @include transition (all 0.2s ease-in-out);
 opacity: 0.8;
+}
+
+.copywrite {
+  height: 75px;
 }
 
 /*****************************************************************************
